--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "npx nodemon server/index.js",
-    "start:react": "react-scripts start",
+    "start:node": "npx nodemon server/index.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
