--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
-    "@babel/node": "^7.15.8"
+    "@babel/node": "^7.15.8",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
