--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
-    "cookie": "^0.4.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fluent-ffmpeg": "^2.1.2",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
     "next": "12.0.2",
@@ -28,6 +28,7 @@
     "@babel/core": "^7.16.0",
     "@babel/node": "^7.16.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/js-cookie": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
