--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/project
+MONGODB_URI=mongodb://localhost:27017
+MONGODB_DB=project
 YOU_KNOW=iLovePlayMinecraftForEver
