finally, the mongose it's work

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGODB_URI=mongodb://localhost:27017
 MONGODB_DB=project
 YOU_KNOW=iLovePlayMinecraftForEver
+KEY=e501a0972aa1229297d6941bab636d05
+IV=34e8f0e9d4f05eca
