--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "paths":{
       "@styles/*":[
         "styles/*"
+      ],
+      "@util/*":[
+        "utility Funtions/*"
       ]
     },
     "target": "es5",
