--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fluent-ffmpeg": "^2.1.2",
+    "formidable": "^2.0.1",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
@@ -28,6 +29,7 @@
     "@babel/core": "^7.16.0",
     "@babel/node": "^7.16.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/formidable": "^2.0.0",
     "@types/js-cookie": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "16.11.6",
