--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
       ],
       "@util/*":[
         "utility Funtions/*"
+      ],
+      "public/*":[
+        "public/*"
       ]
     },
     "target": "es5",
