--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
       "@styles/*":[
         "styles/*"
       ],
+      "@components":[
+        "components/*"
+      ],
       "@util/*":[
         "utility Funtions/*"
       ],
