--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
       "@util/*":[
         "utility Funtions/*"
       ],
-      "public/*":[
+      "@public/*":[
         "public/*"
       ]
     },
