try to use regex with mogoose

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
       ],
       "@public/*":[
         "public/*"
+      ],
+      "@models/*":[
+        "models/*"
       ]
     },
     "target": "es5",
